Updated file pathways and added additional content to Rooms page

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,15 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../static/style.css">
+    <link rel="stylesheet" href="../static/home.css">
     <link rel="stylesheet" href="../static/menu.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <title>The Lauerman House & Victorian Inn</title>
 </head>
-<script>
-</script>
 <body>
     <div class="navbar">
         <input type="checkbox" class="toggler">
@@ -19,7 +17,7 @@
         <div class="menu">
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">Rooms</a></li>
+                <li><a href="../templates/victorian_rooms.html">Rooms</a></li>
                 <li><a href="#">Amenities</a></li>
                 <li><a href="#">Food & Drink</a></li>
                 <li><a href="#">Our Events</a></li>
@@ -44,6 +42,7 @@
                 <img src="../static/images/office.jpg">
                 <img src="../static/images/bar.jpg">
             </div>
+            <button><a href="">Book a Reservation</a></button>
         </div>
         <img class="ornament" src="../static/images/ornament.png">
         <div class="col-md col-lg col-xl">
@@ -56,6 +55,7 @@
                 <img src="../static/images/stairs.jpg">
                 <img src="../static/images/bar2.jpg">
             </div>
+            <button><a href="">Book a Reservation</a></button>
         </div>
         <img class="ornament" src="../static/images/ornament.png">
         <div class="col-md col-lg col-xl" id="activities">
