--- a/static/home.css
+++ b/static/home.css
@@ -124,6 +124,17 @@ body{
     font-size: 24px;
     font-family: 'Peddana', serif;
 }
+.home_body a{
+    color: white;
+    text-decoration: none;
+    font-size: 20px;
+}
+.home_body button{
+    padding: 15px;
+    background-color: #924dde;
+    border: 2px solid #924dde;
+    border-radius: 5px;
+}
 .underline{
     height: 2px solid #924dde;
     border: 2px solid #924dde;
