--- a/templates/victorian_rooms.html
+++ b/templates/victorian_rooms.html
@@ -30,7 +30,7 @@
     </div>
     <div class="main">
         <h1 class="location">The M&M Victorian Inn</h1>
-        <img class="ornament" src="../static/images/ornament.png">
+        <div class="underline"></div>
         <div class="col-md col-lg col-xl">
             <img class="thumbnails" src="../static/images/executive_suite.jpg">
             <h2>Executive Suite</h2>
@@ -39,32 +39,100 @@
             <button class="btn"><a href="">Check Availability</a></button>
         </div>
         <div class="col-md col-lg col-xl">
-            <img src="../static/images/wedgewood_suite.jpg">
+            <img class="thumbnails" src="../static/images/wedgewood_suite.jpg">
             <h2>Wedgewood Suite</h2>
+            <div class="underline"></div>
             <h4>Rates: $178 (Sun-Th) | $188 (Fri-Sat)</h4>
             <p>A large blue carpeted bedroom with a queen-sized bed featured a unique linen canopy, fireplace, a walkout porch and a queen-sized sleeper sofa. The Master Bath Suite includes a two-person Aqua glass whirlpool tub, glass shower and a black granite floor.</p>
             <button class="btn"><a href="">Check Availability</a></button>
         </div>
         <div class="col-md col-lg col-xl">
-            <img src="../static/images/portofino_room.jpg">
+            <img class="thumbnails" src="../static/images/portofino_room.jpg">
             <h2>Portofino Room</h2>
+            <div class="underline"></div>
             <h4>Rates: $178 (Sun-Th) | $188 (Fri-Sat)</h4>
             <p>Average size carpeted bedroom with a queen-sized wood sleigh bed and antique dresser. Ivy and grapevines are the theme in the bath which has a combination tub/shower and marble floor. Beautiful bordeaux and beige grapevine window treatments.</p>
             <button class="btn"><a href="">Check Availability</a></button>
         </div>
         <div class="col-md col-lg col-xl">
-            <img src="../static/images/desert_sand.jpg">
+            <img class="thumbnails" src="../static/images/desert_sand.jpg">
             <h2>Desert Sand</h2>
+            <div class="underline"></div>
             <h4>Rates: $178 (Sun-Th) | $188 (Fri-Sat)</h4>
             <p>A smaller carpeted room with a brass double-sized bed and a birdseye maple antique dresser. The marble floored bath has a shelled ceramic and glass shower.</p>
             <button class="btn"><a href="">Check Availability</a></button>
         </div>
         <div class="col-md col-lg col-xl">
-            <img src="../static/images/normandy_room.jpg">
+            <img class="thumbnails" src="../static/images/normandy_room.jpg">
+            <h2>Normandy Room</h2>
+            <div class="underline"></div>
+            <h4>Rates: $178 (Sun-Th) | $188 (Fri-Sat)</h4>
+            <p>This medium to large room features hardwood flooring covered by a colorful oriental rug, stained glass windows, antique mahogany dresser and handcrafted lamps with silk flowers. The marble floored bath includes a combination tub/shower.</p>
+            <button class="btn"><a href="">Check Availability</a></button>
+        </div>
+        <img class="ornament" src="../static/images/ornament.png">
+        <h1 class="location">The Lauerman House Inn</h1>
+        <div class="underline"></div>
+        <div class="col-md col-lg col-xl">
+            <img class="thumbnails" src="../static/images/normandy_room.jpg">
+            <h2>Normandy Room</h2>
+            <div class="underline"></div>
+            <h4>Rates: $178 (Sun-Th) | $188 (Fri-Sat)</h4>
+            <p>This medium to large room features hardwood flooring covered by a colorful oriental rug, stained glass windows, antique mahogany dresser and handcrafted lamps with silk flowers. The marble floored bath includes a combination tub/shower.</p>
+            <button class="btn"><a href="">Check Availability</a></button>
+        </div>
+        <div class="col-md col-lg col-xl">
+            <img class="thumbnails" src="../static/images/normandy_room.jpg">
+            <h2>Normandy Room</h2>
+            <div class="underline"></div>
+            <h4>Rates: $178 (Sun-Th) | $188 (Fri-Sat)</h4>
+            <p>This medium to large room features hardwood flooring covered by a colorful oriental rug, stained glass windows, antique mahogany dresser and handcrafted lamps with silk flowers. The marble floored bath includes a combination tub/shower.</p>
+            <button class="btn"><a href="">Check Availability</a></button>
+        </div>
+        <div class="col-md col-lg col-xl">
+            <img class="thumbnails" src="../static/images/normandy_room.jpg">
+            <h2>Normandy Room</h2>
+            <div class="underline"></div>
+            <h4>Rates: $178 (Sun-Th) | $188 (Fri-Sat)</h4>
+            <p>This medium to large room features hardwood flooring covered by a colorful oriental rug, stained glass windows, antique mahogany dresser and handcrafted lamps with silk flowers. The marble floored bath includes a combination tub/shower.</p>
+            <button class="btn"><a href="">Check Availability</a></button>
+        </div>
+        <div class="col-md col-lg col-xl">
+            <img class="thumbnails" src="../static/images/normandy_room.jpg">
+            <h2>Normandy Room</h2>
+            <div class="underline"></div>
+            <h4>Rates: $178 (Sun-Th) | $188 (Fri-Sat)</h4>
+            <p>This medium to large room features hardwood flooring covered by a colorful oriental rug, stained glass windows, antique mahogany dresser and handcrafted lamps with silk flowers. The marble floored bath includes a combination tub/shower.</p>
+            <button class="btn"><a href="">Check Availability</a></button>
+        </div>
+        <div class="col-md col-lg col-xl">
+            <img class="thumbnails" src="../static/images/normandy_room.jpg">
+            <h2>Normandy Room</h2>
+            <div class="underline"></div>
+            <h4>Rates: $178 (Sun-Th) | $188 (Fri-Sat)</h4>
+            <p>This medium to large room features hardwood flooring covered by a colorful oriental rug, stained glass windows, antique mahogany dresser and handcrafted lamps with silk flowers. The marble floored bath includes a combination tub/shower.</p>
+            <button class="btn"><a href="">Check Availability</a></button>
+        </div>
+        <div class="col-md col-lg col-xl">
+            <img class="thumbnails" src="../static/images/normandy_room.jpg">
             <h2>Normandy Room</h2>
             <h4>Rates: $178 (Sun-Th) | $188 (Fri-Sat)</h4>
             <p>This medium to large room features hardwood flooring covered by a colorful oriental rug, stained glass windows, antique mahogany dresser and handcrafted lamps with silk flowers. The marble floored bath includes a combination tub/shower.</p>
             <button class="btn"><a href="">Check Availability</a></button>
+        </div>
+    </div>
+    <div class="footer">
+        <div class="contact_info">
+            <h1>Contact Us</h1>
+            <div class="underline"></div>
+            <h2>715.732.7800</h2>
+            <h3>1975 Riverside Ave.</h3>
+            <h3>Marinette, WI 54143</h3>
+            <h3><a href="">innkeeper@mmvictorian.com</a></h3>
+        </div>
+        <!--Google Maps API Here-->
+            <a href="/"><i class="fa fa-3x fa-facebook-official" aria-hidden="true"></i></a>
+            <i class="fa fa-3x fa-instagram" aria-hidden="true"></i>
         </div>
     </div>
 </body>
