--- a/templates/victorian_rooms.html
+++ b/templates/victorian_rooms.html
@@ -26,13 +26,17 @@
         </div>
     </div>
     <div class="banner">
-        <img src="../static/images/room_mm.jpg">
+        <img src="../static/images/banner_room.jpg">
     </div>
     <div class="main">
         <h1 class="location">The M&M Victorian Inn</h1>
         <div class="underline"></div>
         <div class="col-md col-lg col-xl">
             <img class="thumbnails" src="../static/images/executive_suite.jpg">
+            <div class="mini_thumbnails"> 
+                <img src="../static/images/executive_suite.jpg">
+                <img src="../static/images/executive_suite.jpg">
+            </div>
             <h2>Executive Suite</h2>
             <h4>Rates: $178 (Sun-Th) | $188 (Fri-Sat)</h4>
             <p>A large blue carpeted bedroom with an elegant Normandy queen-size bed, floral cotton chintz chaise lounge and stained glass windows. Curl up with a good book in the small glass-enclosed reading area located adjacent to the bed. The Master Bath Suite include an oval two-person whirlpool, pedestal sink, and separate glass enclosed ceramic tile shower and floor.</p>
@@ -41,7 +45,6 @@
         <div class="col-md col-lg col-xl">
             <img class="thumbnails" src="../static/images/wedgewood_suite.jpg">
             <h2>Wedgewood Suite</h2>
-            <div class="underline"></div>
             <h4>Rates: $178 (Sun-Th) | $188 (Fri-Sat)</h4>
             <p>A large blue carpeted bedroom with a queen-sized bed featured a unique linen canopy, fireplace, a walkout porch and a queen-sized sleeper sofa. The Master Bath Suite includes a two-person Aqua glass whirlpool tub, glass shower and a black granite floor.</p>
             <button class="btn"><a href="">Check Availability</a></button>
@@ -49,7 +52,6 @@
         <div class="col-md col-lg col-xl">
             <img class="thumbnails" src="../static/images/portofino_room.jpg">
             <h2>Portofino Room</h2>
-            <div class="underline"></div>
             <h4>Rates: $178 (Sun-Th) | $188 (Fri-Sat)</h4>
             <p>Average size carpeted bedroom with a queen-sized wood sleigh bed and antique dresser. Ivy and grapevines are the theme in the bath which has a combination tub/shower and marble floor. Beautiful bordeaux and beige grapevine window treatments.</p>
             <button class="btn"><a href="">Check Availability</a></button>
@@ -57,7 +59,6 @@
         <div class="col-md col-lg col-xl">
             <img class="thumbnails" src="../static/images/desert_sand.jpg">
             <h2>Desert Sand</h2>
-            <div class="underline"></div>
             <h4>Rates: $178 (Sun-Th) | $188 (Fri-Sat)</h4>
             <p>A smaller carpeted room with a brass double-sized bed and a birdseye maple antique dresser. The marble floored bath has a shelled ceramic and glass shower.</p>
             <button class="btn"><a href="">Check Availability</a></button>
@@ -65,7 +66,6 @@
         <div class="col-md col-lg col-xl">
             <img class="thumbnails" src="../static/images/normandy_room.jpg">
             <h2>Normandy Room</h2>
-            <div class="underline"></div>
             <h4>Rates: $178 (Sun-Th) | $188 (Fri-Sat)</h4>
             <p>This medium to large room features hardwood flooring covered by a colorful oriental rug, stained glass windows, antique mahogany dresser and handcrafted lamps with silk flowers. The marble floored bath includes a combination tub/shower.</p>
             <button class="btn"><a href="">Check Availability</a></button>
@@ -76,7 +76,6 @@
         <div class="col-md col-lg col-xl">
             <img class="thumbnails" src="../static/images/normandy_room.jpg">
             <h2>Normandy Room</h2>
-            <div class="underline"></div>
             <h4>Rates: $178 (Sun-Th) | $188 (Fri-Sat)</h4>
             <p>This medium to large room features hardwood flooring covered by a colorful oriental rug, stained glass windows, antique mahogany dresser and handcrafted lamps with silk flowers. The marble floored bath includes a combination tub/shower.</p>
             <button class="btn"><a href="">Check Availability</a></button>
@@ -84,7 +83,6 @@
         <div class="col-md col-lg col-xl">
             <img class="thumbnails" src="../static/images/normandy_room.jpg">
             <h2>Normandy Room</h2>
-            <div class="underline"></div>
             <h4>Rates: $178 (Sun-Th) | $188 (Fri-Sat)</h4>
             <p>This medium to large room features hardwood flooring covered by a colorful oriental rug, stained glass windows, antique mahogany dresser and handcrafted lamps with silk flowers. The marble floored bath includes a combination tub/shower.</p>
             <button class="btn"><a href="">Check Availability</a></button>
@@ -92,7 +90,6 @@
         <div class="col-md col-lg col-xl">
             <img class="thumbnails" src="../static/images/normandy_room.jpg">
             <h2>Normandy Room</h2>
-            <div class="underline"></div>
             <h4>Rates: $178 (Sun-Th) | $188 (Fri-Sat)</h4>
             <p>This medium to large room features hardwood flooring covered by a colorful oriental rug, stained glass windows, antique mahogany dresser and handcrafted lamps with silk flowers. The marble floored bath includes a combination tub/shower.</p>
             <button class="btn"><a href="">Check Availability</a></button>
